# tw-legal-llm

./: .gitignore  LICENSE  README.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: faq.md  privacy.md  tools-reference.md
examples/: claude-desktop-config.json
src/tll_client/: __init__.py  server.py
src/tlr_client/: __init__.py  server.py
tests/: test_bundle.py  test_verify.py
twlegalrag/: __init__.py  bundle.py  cli.py  config.py  llm.py  retrieval.py  verify.py
twlegalrag/faithful/: VENDORED.md  __init__.py  citation_utils.py  section_segmenter.py  verifier.py
