[project]
name = "tw-legal-rag"
version = "0.1.0"
description = "MCP client for Taiwan court judgments — bring your own LLM."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Aaron Huang", email = "aa.0101181514@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
tw-legal-rag = "tlr_client.server:main"

[project.urls]
Homepage = "https://github.com/aa0101181514/tw-legal-rag"
Issues = "https://github.com/aa0101181514/tw-legal-rag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tlr_client"]
