[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twlegalrag"
version = "0.1.0"
description = "Open-source CLI for semantic Taiwan legal judgment retrieval — search judgments, package them for your own AI tools, and run a bundle-level citation check. Retrieval-only; does not generate or endorse legal advice."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Dr.Lawbot (dr-lawbot.com)" }]
keywords = ["taiwan", "legal", "judgments", "rag", "retrieval", "semantic-search", "citation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Chinese (Traditional)",
]
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
twlegalrag = "twlegalrag.cli:app"

[project.urls]
Homepage = "https://dr-lawbot.com"
Source = "https://github.com/aa0101181514/tw-legal-rag"
Issues = "https://github.com/aa0101181514/tw-legal-rag/issues"

[tool.hatch.build.targets.wheel]
packages = ["twlegalrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
